--- a/ACard/Properties/launchSettings.json
+++ b/ACard/Properties/launchSettings.json
@@ -6,6 +6,10 @@
     "add game ongeki path": {
       "commandName": "Project",
       "commandLineArgs": "add game ongeki path"
+    },
+    "switch test": {
+      "commandName": "Project",
+      "commandLineArgs": "switch chuni works?"
     }
   }
 }
